# nextdns

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  example.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup-dev-env.sh  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  pr-labels.yml  pre-commit-update  pre-commit-update.yml  publish.yml  release-drafter.yml  stale.yml  test.yml
nextdns/: __init__.py  const.py  exceptions.py  model.py
scripts/: setup-devcontainer-env.sh  setup-local-env.sh
tests/: __init__.py  conftest.py  test_init.py
tests/__snapshots__/: test_init.ambr
tests/fixtures/: dnssec.json  encryption.json  ip_versions.json  logs.csv  profile.json  profiles.json  protocols.json  status.json  test.json
tests/snapshots/: test_init.ambr
