[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nextdns"
version = "0.0.0"
license = "Apache-2.0"
description = "Python wrapper for NextDNS API."
readme = "README.md"
authors = [{name = "Maciej Bieniek"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.4",
    "tenacity"
]
[project.optional-dependencies]
test = [
  "aioresponses==0.7.8",
  "coverage==7.11.3",
  "mypy==1.18.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "pytest-error-for-skips==2.0.2",
  "pytest-timeout==2.4.0",
  "pytest==9.0.0",
  "ruff==0.14.5",
  "syrupy==5.0.0",
]
dev = [
  "pre-commit==4.4.0",
]

[project.urls]
Homepage = "https://github.com/bieniu/nextdns"

[tool.setuptools.packages.find]
include = ["nextdns*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true

[tool.ruff]
target-version = "py313"

lint.select = ["ALL"]

lint.ignore = [
    "ANN201",   # Missing return type annotation for public function
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "COM812",   # Trailing comma missing
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "EM101",    # Exception must not use a string literal, assign to variable first
    "EM102",    # Exception must not use an f-string literal, assign to variable first
    "FBT001",   # Boolean positional arg in function definition
    "PLR0915",  # Too many statements
    "TC002",    # Move third-party import into a type-checking block
    "TC003",    # Move standard library import into a type-checking block
    "TC006",    # Add quotes to type expression in `typing.cast()`
    "TRY003",   # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "FBT003",    # Boolean positional value in function call
    "PLR2004",   # Magic value used in comparison
    "S101",      # Use of `assert` detected
    ]
"example.py" = [
    "ERA001",    # Found commented-out code
    "T201",      # `print` found
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.coverage.run]
source = ["nextdns"]

[tool.tox]
legacy_tox_ini = """

[tox]
envlist = py312, py313, lint, typing, coverage
skip_missing_interpreters = True

[gh-actions]
python =
  3.12: py312, lint, typing, coverage
  3.13: py313

[testenv]
commands =
  pytest --timeout=30 --cov=nextdns --cov-report=xml {posargs} --error-for-skips
deps =
  .[test]

[testenv:lint]
basepython = python3
depends = py312
ignore_errors = True
skip_install = True
usedevelop = False
commands =
  ruff check .
  ruff format --check .

[testenv:typing]
basepython = python3
depends = py312
ignore_errors = True
skip_install = True
usedevelop = False
commands =
  mypy nextdns

[testenv:coverage]
basepython = python3
depends = py312
skip_install = True
usedevelop = False
commands =
  coverage report --fail-under=79
"""
